@@ -233,8 +233,8 @@ public class IndexWriter implements Closeable, TwoPhaseCommit {
 
   private Lock writeLock;
 
-  private boolean closed;
-  private boolean closing;
+  private volatile boolean closed;
+  private volatile boolean closing;
 
   // Holds all SegmentInfo instances currently involved in
   // merges
@@ -758,6 +758,7 @@ public class IndexWriter implements Closeable, TwoPhaseCommit {
    * delCount is returned.
    */
   public int numDeletedDocs(SegmentInfo info) throws IOException {
+    ensureOpen(false);
     SegmentReader reader = readerPool.getIfExists(info);
     try {
       if (reader != null) {
@@ -960,6 +961,7 @@ public class IndexWriter implements Closeable, TwoPhaseCommit {
    * IndexWriterConfig} for details.
    */
   public IndexWriterConfig getConfig() {
+    ensureOpen(false);
     return config;
   }
 
@@ -1204,6 +1206,7 @@ public class IndexWriter implements Closeable, TwoPhaseCommit {
    *  not counting deletions.
    *  @see #numDocs */
   public synchronized int maxDoc() {
+    ensureOpen();
     int count;
     if (docWriter != null)
       count = docWriter.getNumDocs();
@@ -1221,6 +1224,7 @@ public class IndexWriter implements Closeable, TwoPhaseCommit {
    *  counted you should call {@link #commit()} first.
    *  @see #numDocs */
   public synchronized int numDocs() throws IOException {
+    ensureOpen();
     int count;
     if (docWriter != null)
       count = docWriter.getNumDocs();
@@ -1960,6 +1964,7 @@ public class IndexWriter implements Closeable, TwoPhaseCommit {
   }
 
   private final void maybeMerge(int maxNumSegmentsOptimize, boolean optimize) throws CorruptIndexException, IOException {
+    ensureOpen(false);
     updatePendingMerges(maxNumSegmentsOptimize, optimize);
     mergeScheduler.merge(this);
   }
@@ -2143,6 +2148,7 @@ public class IndexWriter implements Closeable, TwoPhaseCommit {
    *    {@link MergePolicy.MergeAbortedException}s.
    */
   public synchronized void deleteAll() throws IOException {
+    ensureOpen();
     try {
 
       // Abort any running merges
@@ -2229,6 +2235,7 @@ public class IndexWriter implements Closeable, TwoPhaseCommit {
    *    will have completed once this method completes.</p>
    */
   public synchronized void waitForMerges() {
+    ensureOpen(false);
     if (infoStream != null) {
       message("waitForMerges");
     }
@@ -2736,6 +2743,7 @@ public class IndexWriter implements Closeable, TwoPhaseCommit {
    *  index to commit.
    */
   public final void prepareCommit(Map<String,String> commitUserData) throws CorruptIndexException, IOException {
+    ensureOpen(false);
 
     if (infoStream != null) {
       message("prepareCommit: flush");
@@ -4098,8 +4106,14 @@ public class IndexWriter implements Closeable, TwoPhaseCommit {
    *  be deleted the next time commit() is called.
    */
   public synchronized void deleteUnusedFiles() throws IOException {
+    ensureOpen(false);
     deleter.deletePendingFiles();
     deleter.revisitPolicy();
+  }
+
+  // Called by DirectoryReader.doClose
+  synchronized void deletePendingFiles() throws IOException {
+    deleter.deletePendingFiles();
   }
 
   /**
@@ -4121,6 +4135,7 @@ public class IndexWriter implements Closeable, TwoPhaseCommit {
    * {@link #optimize}, you can call {@link #waitForMerges()} before.
    */
   public void setPayloadProcessorProvider(PayloadProcessorProvider pcp) {
+    ensureOpen();
     payloadProcessorProvider = pcp;
   }
 
@@ -4129,6 +4144,7 @@ public class IndexWriter implements Closeable, TwoPhaseCommit {
    * merges to process payloads.
    */
   public PayloadProcessorProvider getPayloadProcessorProvider() {
+    ensureOpen();
     return payloadProcessorProvider;
   }
 }
